fixed spacing and color for posts with images

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -93,8 +93,6 @@ html, body, .notepad-post-container, .notepad-post-header {
     left: 50%;
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%); }
-    .post-template .notepad-post-title a {
-      color: black; }
       .post-template .notepad-post-title a:hover {
         color: #A877FC; }
     .post-template .notepad-post-title h1 {
@@ -102,8 +100,7 @@ html, body, .notepad-post-container, .notepad-post-header {
       font-weight: 800;
       font-size: 2.5rem;
       margin: 0 auto;
-      line-height: 1.1;
-      text-transform: uppercase; }
+      line-height: 1.1;}
       @media only screen and (min-width: 40.063em) {
         .post-template .notepad-post-title h1 {
           font-size: 3.125rem; } }
@@ -286,7 +283,8 @@ html, body, .notepad-post-container, .notepad-post-header {
     opacity: 0;
     color: black; }
   .post-template .intro-effect-sliced.modify .notepad-post-header p {
-    opacity: 1; }
+    opacity: 1;
+    color: rgba(0, 0, 0, 0.5); }
   .post-template .intro-effect-sliced.modify .notepad-post-header h1 {
     color: black; }
   .post-template .intro-effect-sliced .notepad-post-content > div {
